[package]
name = "logix-vfs"
version = "0.6.1"
description = "A virtual file system abstraction used by logix"
repository = "https://github.com/logix-tool/logix-vfs"
edition = "2021"
authors = [
  "Bjørn Ove Hay Andersen <bjrnove@gmail.com>",
  "Gigantos <gigantos@gigantos.net>",
]
readme = "README.md"
license = "MPL-2.0"
categories = ["filesystem"]

[dependencies]
thiserror = "1.0.56"

[workspace]
members = ["xtask"]
