[package]
name = "logix-vfs"
description = "A virtual file system abstraction used by logix"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"
readme = "README.md"
categories = ["filesystem"]

[dependencies]
thiserror = "1.0.61"

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.9.0"
authors = [
  "Gigantos <gigantos@gigantos.net>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/logix-tool/logix-vfs"
